[package]
name = "erc3770"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.1", default-features = false }
alloy-chains = { version = "0.1", default-features = false }

[lints]
rust.missing-debug-implementations = "warn"
rust.missing-docs = "warn"
rust.unreachable-pub = "warn"
rust.unused-must-use = "deny"
rust.rust-2018-idioms = "deny"
rustdoc.all = "warn"

[lints.clippy]
all = "warn"
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"
